// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package blimp;

// Contains Client->Engine information to establish an authenticated connection.
message StartConnectionMessage {
  optional string client_token = 1;
  optional int32 protocol_version = 2;
}

message ProtocolControlMessage {
  enum Type {
    UNKNOWN = 0;

    // Client => Server types.
    START_CONNECTION = 1;
  }

  optional Type type = 1;

  optional StartConnectionMessage start_connection = 1000;
}
